Bugfix: if the last rules is empty, it will be ignored by ini parser

--- a/ApplicationServer/windows/VFS/conf/default.conf
+++ b/ApplicationServer/windows/VFS/conf/default.conf
@@ -26,9 +26,9 @@ configuration = "^/\..*"
 data = "%DESKTOP/*"
 
 # Last rule to keep files
-data = ""
+data = "*"
 # Very Last rule to store symlinks
-volatile = ""
+volatile = "*"
 
 
 # Union list
