Use Local Linux Account Backport from cbbbed10287f3924da6db9d17455b4a6e138bcda [swat/3.0useLocalAccountLinux]

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -40,6 +40,16 @@ level = error warn info debug
 # use this direcotry for skel when create user home direcotry
 # default is /dev/null (no skel)
 # another wanted behavior can be /etc/skel
+#
+# override_password_method = [unix|custom]
+# unix: use passwd -r files
+# custom: usefull when using local account method with LDAP users and SSO
+# To use this method, first install libpam-pwdfile and apache2-utils packages
+# Then add a first rule in xrdp PAM configuration (/etc/pam.d/xrdp-sesman):
+# auth sufficient pam_pwdfile.so pwdfile /etc/ulteo/ovd/users.passwd
+# Finally, touch the /etc/ulteo/ovd/users.passwd file and restart the OVD service
+#
+# default is unix
 
 
 [Gateway]
