--- a/SessionManager/web/modules/SessionManagement/Makefile.am
+++ b/SessionManager/web/modules/SessionManagement/Makefile.am
@@ -1,5 +1,6 @@
 scripts_DATA = internal.php \
                microsoft.php \
+               localusers.php \
                novell.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/modules/SessionManagement
