Bugfix: wrong configuration file

--- a/ApplicationServer/windows/VFS/conf/default.conf
+++ b/ApplicationServer/windows/VFS/conf/default.conf
@@ -6,8 +6,8 @@ union = configuration, data, volatile
 
 # manage transformation due to session language
 [translation]
-Desktop = "%CSIDL_DESKTOP"
-Document= "%CSIDL_PERSONAL"
+Desktop = "%{CSIDL_DESKTOP}"
+Document= "%{CSIDL_PERSONAL}"
 
 [log]
 level = INFO
@@ -23,7 +23,7 @@ volatile = "^/\.mozilla/firefox/.*.default/Cache.*"
 volatile = "^/\.cache.*"
 data = "^/\.thunderbird.*"
 configuration = "^/\..*"
-data = "%DESKTOP/*"
+data = "%{DESKTOP}/*"
 
 # Last rule to keep files
 data = "*"
@@ -47,12 +47,12 @@ volatile = "*"
 #
 
 # path => path to add
-path = "%CSIDL_COMMON_APPDATA\\ulteo\\vfs\\$USER"
+path = "%{CSIDL_COMMON_APPDATA}\ulteo\vfs\${USERNAME}"
 
 # data of the path is inited using the the following source
 rsync = conf.Window/
 
-rsync_filter = "%CSIDL_COMMON_APPDATA\\ulteo\\conf\\profiles_filter.conf"
+rsync_filter = "%{CSIDL_COMMON_APPDATA}\ulteo\conf\profiles_filter.conf"
 
 
 [data]
@@ -67,4 +67,4 @@ path = Data
 # delete the directory at unmount
 deleteOnEnd = true
 
-path = "%CSIDL_COMMON_APPDATA\\ulteo\\vfs_volatile\\$USER/"
+path = "%{CSIDL_COMMON_APPDATA}\ulteo\vfs_volatile\${USERNAME}"
