Working on configuration part

--- a/ApplicationServer/windows/VFS/src/VFS/CMakeLists.txt
+++ b/ApplicationServer/windows/VFS/src/VFS/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(VFS main.cpp)
-target_link_libraries(VFS common)
+target_link_libraries(VFS common Shlwapi)
 
 install(TARGETS VFS DESTINATION .)
 
