Improvement: move code from main function in an object

--- a/ApplicationServer/windows/VFS/src/VFS/CMakeLists.txt
+++ b/ApplicationServer/windows/VFS/src/VFS/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(VFS main.cpp)
+add_executable(VFS main.cpp VFS.cpp)
 target_link_libraries(VFS common Shlwapi)
 
 install(TARGETS VFS DESTINATION .)
