Improvement: move desktop refresh code in the System class

--- a/ApplicationServer/windows/VFS/src/VFSHookLoader/CMakeLists.txt
+++ b/ApplicationServer/windows/VFS/src/VFSHookLoader/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_executable(VFSHookLoader main.cpp)
+target_link_libraries(VFSHookLoader common)
 set_target_properties(VFSHookLoader PROPERTIES OUTPUT_NAME "VFSHookLoader${ARCH}")
 
 install(TARGETS VFSHookLoader DESTINATION .)
