--- a/ApplicationServer/windows/VFS/CMakeLists.txt
+++ b/ApplicationServer/windows/VFS/CMakeLists.txt
@@ -10,6 +10,8 @@ set(ARCH "32")
 
 if (MSVC)
 	add_definitions(-DUNICODE -D_UNICODE)
+	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
 endif()
 
 if (${CMAKE_GENERATOR} MATCHES ".*Win64")
