Update configuration file

--- a/ApplicationServer/windows/VFS/conf/default.conf
+++ b/ApplicationServer/windows/VFS/conf/default.conf
@@ -3,7 +3,6 @@
 # separator must be ','.
 # each value imply a dedicated section
 union = configuration, data, volatile
-hookRegistry = false
 
 # manage transformation due to session language
 [translation]
@@ -20,16 +19,11 @@ outputFilename = ""
 # list of path redirection 
 # union_name => "regex path pattern accepted"
 [rules]
-volatile = "^/\.mozilla/firefox/.*.default/Cache.*"
-volatile = "^/\.cache.*"
-data = "^/\.thunderbird.*"
-configuration = "^/\..*"
-data = "%{CSIDL_DESKTOP}/.*"
+configuration = "%{CSIDL_APPDATA}\.*"
+configuration = "%{CSIDL_LOCAL_APPDATA}\.*"
 
 # Last rule to keep files
 data = ".*"
-# Very Last rule to store symlinks
-volatile = ".*"
 
 
 # Union list
@@ -48,12 +42,12 @@ volatile = ".*"
 #
 
 # path => path to add
-path = "%{CSIDL_COMMON_APPDATA}\ulteo\vfs\${USERNAME}"
+path = "%{CSIDL_COMMON_APPDATA}\ulteo\profile\${USERNAME}"
 
 # data of the path is inited using the the following source
-rsync = conf.Window/
+rsync = conf.Window\
 
-rsync_filter = "%{CSIDL_COMMON_APPDATA}\ulteo\conf\profiles_filter.conf"
+rsync_filter = "%{CSIDL_COMMON_APPDATA}\ulteo\ovd\profiles_filter.conf"
 
 
 [data]
@@ -68,4 +62,4 @@ path = Data
 # delete the directory at unmount
 deleteOnEnd = true
 
-path = "%{CSIDL_COMMON_APPDATA}\ulteo\vfs_volatile\${USERNAME}"
+path = "%{CSIDL_COMMON_APPDATA}\ulteo\profile\${USERNAME}_volatile"
