Improvement: add possibility to pre create directory in repository

--- a/ApplicationServer/windows/VFS/conf/default.conf
+++ b/ApplicationServer/windows/VFS/conf/default.conf
@@ -49,6 +49,9 @@ rsync = conf.Window\
 
 rsync_filter = "%{CSIDL_COMMON_APPDATA}\ulteo\ovd\profiles_filter.conf"
 
+# define directory to create in the repository
+populate = "CSIDL_APPDATA; CSIDL_LOCAL_APPDATA"
+
 
 [data]
 # represent user data
@@ -57,6 +60,9 @@ rsync_filter = "%{CSIDL_COMMON_APPDATA}\ulteo\ovd\profiles_filter.conf"
 # path => path to add
 path = Data
 
+
+# define directory to create in the repository
+populate = "Desktop; Document"
 
 [volatile]
 # delete the directory at unmount
