--- a/ApplicationServer/windows/PDFPrinterDriver/ulteodll.inf.in
+++ b/ApplicationServer/windows/PDFPrinterDriver/ulteodll.inf.in
@@ -12,7 +12,7 @@ Provider="Ulteo"
 LayoutFile=ntprint.inf
 Class=Printer
 ClassGUID={4D36E979-E325-11CE-BFC1-08002BE10318}
-DriverVer=06/22/2012,1.0.0.0
+DriverVer=@DATE@,1.0.0.0
 Version=@VERSION@
 CatalogFile=ulteo.cat
 CatalogFile.ntx86=ulteo.cat
