Improvement: ulteo possibitility to use ulteo OS Version variable

--- a/ApplicationServer/windows/VFS/conf/default.conf
+++ b/ApplicationServer/windows/VFS/conf/default.conf
@@ -45,7 +45,7 @@ data = ".*"
 path = "%{CSIDL_COMMON_APPDATA}\ulteo\profile\${USERNAME}"
 
 # data of the path is inited using the the following source
-rsync = conf.Window\
+rsync = "conf.Window.${UOS_VERSION}"
 
 rsync_filter = "%{CSIDL_COMMON_APPDATA}\ulteo\ovd\profiles_filter.conf"
 
