Update configuration file

--- a/ApplicationServer/windows/VFS/conf/default.conf
+++ b/ApplicationServer/windows/VFS/conf/default.conf
@@ -7,7 +7,9 @@ union = configuration, data, volatile
 # manage transformation due to session language
 [translation]
 Desktop = "%{CSIDL_DESKTOP}"
-Document= "%{CSIDL_PERSONAL}"
+Documents= "%{CSIDL_PERSONAL}"
+CSIDL_APPDATA = "%{CSIDL_APPDATA}"
+CSIDL_LOCAL_APPDATA = "%{CSIDL_LOCAL_APPDATA}"
 
 [log]
 level = INFO
@@ -19,8 +21,13 @@ outputFilename = ""
 # list of path redirection 
 # union_name => "regex path pattern accepted"
 [rules]
-configuration = "%{CSIDL_APPDATA}\.*"
-configuration = "%{CSIDL_LOCAL_APPDATA}\.*"
+configuration = "%{CSIDL_APPDATA}\Microsoft\Windows\Libraries.*"
+volatile = "%{CSIDL_APPDATA}\ulteo\.*"
+volatile = "${USERPROFILE}"\WINDOWS\.*"
+volatile = "%{CSIDL_PROGRAMS}.*"
+volatile = "${USERPROFILE}\AppData.*"
+configuration = "%{CSIDL_APPDATA}.*"
+configuration = "%{CSIDL_LOCAL_APPDATA}.*"
 
 # Last rule to keep files
 data = ".*"
@@ -45,12 +52,12 @@ data = ".*"
 path = "%{CSIDL_COMMON_APPDATA}\ulteo\profile\${USERNAME}"
 
 # data of the path is inited using the the following source
-rsync = "conf.Window.${UOS_VERSION}"
+rsync = "conf.Windows.${UOS_VERSION}"
 
 rsync_filter = "%{CSIDL_COMMON_APPDATA}\ulteo\ovd\profiles_filter.conf"
 
 # define directory to create in the repository
-populate = "CSIDL_APPDATA; CSIDL_LOCAL_APPDATA"
+populate = "CSIDL_APPDATA; CSIDL_LOCAL_APPDATA; CSIDL_APPDATA\Microsoft\Windows\Libraries"
 
 
 [data]
@@ -60,12 +67,10 @@ populate = "CSIDL_APPDATA; CSIDL_LOCAL_APPDATA"
 # path => path to add
 path = Data
 
-
 # define directory to create in the repository
-populate = "Desktop; Document"
+populate = "Desktop; Documents"
+
 
 [volatile]
-# delete the directory at unmount
-deleteOnEnd = true
-
-path = "%{CSIDL_COMMON_APPDATA}\ulteo\profile\${USERNAME}_volatile"
+path = "${USERPROFILE}"
+translate = false
