--- a/AdminConsole/web/Makefile.am
+++ b/AdminConsole/web/Makefile.am
@@ -1,8 +1,8 @@
-# Copyright (C) 2008-2012 Ulteo SAS
+# Copyright (C) 2008-2013 Ulteo SAS
 # http://www.ulteo.com
 # Author Gauvain POCENTEK <gauvain@linutop.com> 2008-2009
 # Author Jeremy DESVAGES <jeremy@ulteo.com> 2009-2010
-# Author Julien LANGLOIS <julien@ulteo.com> 2009, 2012
+# Author Julien LANGLOIS <julien@ulteo.com> 2009, 2013
 # Author Laurent CLOUET <laurent@ulteo.com> 2009
 # Author Samuel BOVEE <samuel@ulteo.com> 2010
 #
@@ -20,7 +20,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-SUBDIRS = ajax media includes classes
+SUBDIRS = ajax media
 
 scripts_DATA = actions.php \
                action-reporting.php \
@@ -55,7 +55,7 @@ scripts_DATA = actions.php \
                usersgroup.php \
                wizard.php
 
-scriptsdir = $(datadir)/ulteo/administration_console/
+scriptsdir = $(datadir)/ulteo/administration_console/web
 
 DIST_SUBDIRS=$(SUBDIRS)
 EXTRA_DIST = $(scripts_DATA)
