Fix WebClient's autotools because of Framework modifications

--- a/client/web/configure.ac.in
+++ b/client/web/configure.ac.in
@@ -109,6 +109,15 @@ web/media/script/lib/Makefile
 web/media/script/lib/nifty/Makefile
 web/media/script/lib/prototype/Makefile
 web/media/script/lib/scriptaculous/Makefile
+web/media/script/lib/jquery/Makefile
+web/media/script/uovd/Makefile
+web/media/script/uovd/provider/Makefile
+web/media/script/uovd/provider/http/Makefile
+web/media/script/uovd/provider/rdp/Makefile
+web/media/script/uovd/provider/rdp/application/Makefile
+web/media/script/uovd/provider/rdp/html5/Makefile
+web/media/script/uovd/provider/rdp/html5/guacamole/Makefile
+web/media/script/webclient/Makefile
 web/media/style/Makefile
 web/PEAR/Makefile
 web/PEAR/CAS/Makefile
