--- a/client/web/web/media/script/Makefile.am
+++ b/client/web/web/media/script/Makefile.am
@@ -1,21 +1,8 @@
-SUBDIRS = lib
+SUBDIRS = lib \
+          uovd \
+          webclient
 
-scripts_DATA = application.js \
-               common.js \
-               daemon.js \
-               daemon_applications.js \
-               daemon_desktop.js \
-               daemon_external.js \
-               daemon_portal.js \
-               external.js \
-               JavaTester.js \
-               Logger.js \
-               server.js \
-               timezones.js \
-               uovd_int_client.js \
-               uovd_ext_client.js \
-               uovd.js
-               
+scripts_DATA = uovd.js webclient.js
 
 scriptsdir = $(datadir)/ulteo/webclient/media/script
 
