Improvement: manage the directory remove at session end

--- a/ApplicationServer/windows/VFS/conf/default.conf
+++ b/ApplicationServer/windows/VFS/conf/default.conf
@@ -41,7 +41,7 @@ data = ".*"
 #  -rsync:         Represent the path involved in the data synchronization
 #                   of the initial 'path' content
 #  -rsync_filter:  Represent the filter apply to the rsync command
-#  -reject:        Represent regular expression of rejected path
+#  -deleteOnEnd:   Define if the directory is removed at the session end
 # a union can have many reject directive but one path
 
 [configuration]
@@ -55,6 +55,8 @@ path = "%{CSIDL_COMMON_APPDATA}\ulteo\profile\${USERNAME}"
 rsync = "conf.Windows.${UOS_VERSION}"
 
 rsync_filter = "%{CSIDL_COMMON_APPDATA}\ulteo\ovd\profiles_filter.conf"
+
+deleteOnEnd = true
 
 # define directory to create in the repository
 populate = "CSIDL_APPDATA; CSIDL_LOCAL_APPDATA; CSIDL_APPDATA\Microsoft\Windows\Libraries"
