--- a/ApplicationServer/windows/VFS/conf/windows_profiles_filter.conf
+++ b/ApplicationServer/windows/VFS/conf/windows_profiles_filter.conf
@@ -1,4 +1,5 @@
-- *
+- NTUSER.*
++ "CSIDL_APPDATA"
 + "CSIDL_APPDATA\*"
 - "CSIDL_APPDATA\Protect"
 - "CSIDL_APPDATA\Start Menu"
@@ -6,6 +7,7 @@
 - "CSIDL_APPDATA\ulteo"
 - "CSIDL_APPDATA\Identities"
 
++ "CSIDL_LOCAL_APPDATA"
 + "CSIDL_LOCAL_APPDATA\*"
 - "CSIDL_LOCAL_APPDATA\Temp"
 - "CSIDL_LOCAL_APPDATA\Cache"
@@ -15,5 +17,7 @@
 - "CSIDL_LOCAL_APPDATA\Credentials"
 - "CSIDL_LOCAL_APPDATA\Microsoft\Windows\UsrClass.dat*"
 
++ "CSIDL_FAVORITES"
 + "CSIDL_FAVORITES\*"
+
 
