Packaging: VFS package is required by the setup-aps setup

--- a/packaging/windows/setup-aps/setup.conf
+++ b/packaging/windows/setup-aps/setup.conf
@@ -6,6 +6,7 @@ arch:
   childs:
     plus:
       packages:
+        - VFS
         - icon-extractor
         - ovd-externalapps-client
         - ovd-integrated-launcher
