--- a/packaging/windows/setup-aps/conf/default.conf
+++ b/packaging/windows/setup-aps/conf/default.conf
@@ -13,7 +13,7 @@ CSIDL_LOCAL_APPDATA = "%{CSIDL_LOCAL_APPDATA}"
 
 [log]
 level = INFO
-enableDevelOutput = true
+enableDevelOutput = false
 enableStdOutput = true
 outputFilename = ""
 
@@ -25,9 +25,9 @@ configuration = "%{CSIDL_APPDATA}\Microsoft\Windows\Libraries.*"
 volatile = "%{CSIDL_APPDATA}\ulteo\.*"
 volatile = "${USERPROFILE}"\WINDOWS\.*"
 volatile = "%{CSIDL_PROGRAMS}.*"
-volatile = "${USERPROFILE}\AppData.*"
 configuration = "%{CSIDL_APPDATA}.*"
 configuration = "%{CSIDL_LOCAL_APPDATA}.*"
+volatile = "${USERPROFILE}\AppData.*"
 
 # Last rule to keep files
 data = ".*"
