Update configuration file

--- a/ApplicationServer/windows/VFS/conf/default.conf
+++ b/ApplicationServer/windows/VFS/conf/default.conf
@@ -10,6 +10,7 @@ Desktop = "%{CSIDL_DESKTOP}"
 Documents= "%{CSIDL_PERSONAL}"
 CSIDL_APPDATA = "%{CSIDL_APPDATA}"
 CSIDL_LOCAL_APPDATA = "%{CSIDL_LOCAL_APPDATA}"
+CSIDL_TEMPLATES = "%{CSIDL_TEMPLATES}"
 
 [log]
 level = INFO
@@ -22,11 +23,15 @@ outputFilename = ""
 # union_name => "regex path pattern accepted"
 [rules]
 configuration = "%{CSIDL_APPDATA}\Microsoft\Windows\Libraries.*"
+volatile = "${TEMP}\.*"
 volatile = "%{CSIDL_APPDATA}\ulteo\.*"
-volatile = "${USERPROFILE}"\WINDOWS\.*"
+volatile = "${USERPROFILE}\WINDOWS\.*"
 volatile = "%{CSIDL_PROGRAMS}.*"
+volatile = "%{CSIDL_INTERNET_CACHE}.*"
+configuration = "%{CSIDL_TEMPLATES}.*"
 configuration = "%{CSIDL_APPDATA}.*"
 configuration = "%{CSIDL_LOCAL_APPDATA}.*"
+configuration = "%{CSIDL_FAVORITES}.*"
 volatile = "${USERPROFILE}\AppData.*"
 
 # Last rule to keep files
