Improvement: rewrite expandPath in order to use protected variable

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -14,8 +14,8 @@ bindDestination = @locale
 
 # manage transformation due to session language
 [translation]
-Desktop = "%DESKTOP"
-Document= "%DOCUMENTS"
+Desktop = "%{DESKTOP}"
+Document= "%{DOCUMENTS}"
 
 [log]
 level = INFO
@@ -43,7 +43,7 @@ enableStdOutput = true
 #
 
 # path => path to add
-path = "/var/spool/ulteo/rufs/$USER/"
+path = "/var/spool/ulteo/rufs/${USER}/"
 
 acceptSymlink = true
 deleteOnEnd = true
@@ -98,5 +98,5 @@ reject = "^/\..*"
 acceptSymlink = true
 deleteOnEnd = true
 
-path = "/var/spool/ulteo/rufs_volatile/$USER/"
+path = "/var/spool/ulteo/rufs_volatile/${USER}/"
 
