Improvement: use a dedicated section for Union rules

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -24,6 +24,21 @@ enableDevelOutput = true
 enableStdOutput = true
 #outputFilename = ""
 
+# Rules list
+# list of path redirection
+# union_name => "regex path pattern accepted"
+[rules]
+volatile = "^/\.mozilla/firefox/.*.default/Cache.*"
+volatile = "^/\.cache.*"
+data = "^/\.thunderbird.*"
+configuration = "^/\..*"
+data = "%{DESKTOP}/*"
+
+# Last rule to keep files
+data = ""
+# Very Last rule to store symlinks
+volatile = ""
+
 
 # Union list
 # each section represent one union destination
@@ -33,10 +48,6 @@ enableStdOutput = true
 #  -rsync:         Represent the path involved in the data synchronization
 #                   of the initial 'path' content
 #  -rsync_filter:  Represent the filter apply to the rsync command
-#  -accept:        Represent regular expression of accepted path
-#  -reject:        Represent regular expression of rejected path
-# a union can have many accept / reject directive but
-# one path
 
 [configuration]
 # represent files involved in the configuration
@@ -53,25 +64,6 @@ rsync = conf.Linux/
 
 rsync_filter = "/etc/ulteo/rufs/profiles_filter.conf"
 
-# accept => path pattern accepted
-accept = "^/\..*"
-
-# reject => path pattern rejected
-#reject = "^/\.mozilla.*"
-
-
-# [locale]
-# represent files not saved
-#
-
-# path => path to add
-# path = /tmp/$PROFILE_ID
-
-# accept => path pattern accepted
-# accept = "^\."
-
-# reject => path pattern rejected
-# reject = ""
 
 
 [data]
@@ -83,12 +75,6 @@ acceptSymlink = false
 
 # path => path to add
 path = Data
-
-# accept => path pattern accepted
-accept = "^/.*"
-
-# reject => path pattern rejected
-reject = "^/\..*"
 
 
 [volatile]
