Improvement: add an option in order to create intermediary directory

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -83,6 +83,7 @@ path = Data
 # default is false
 acceptSymlink = true
 deleteOnEnd = true
+createParentDirectory = true
 
 path = "/var/spool/ulteo/rufs_volatile/${USER}/"
 
