--- a/SessionManager/web/webservices/Makefile.am
+++ b/SessionManager/web/webservices/Makefile.am
@@ -1,5 +1,7 @@
 scripts_DATA =  application_icon.php \
                 applications_static.php \
+                applications_webapps.php \
+                run_sql.php \
                 configuration.php \
                 server_monitoring.php \
                 server_name.php \
