--- a/OvdServer/setup.py.in
+++ b/OvdServer/setup.py.in
@@ -4,7 +4,7 @@
 # Copyright (C) 2010-2013 Ulteo SAS
 # http://www.ulteo.com
 # Author David LECHEVALIER <david@ulteo.com> 2011
-# Author Julien LANGLOIS <julien@ulteo.com> 2010, 2011
+# Author Julien LANGLOIS <julien@ulteo.com> 2010, 2011, 2013
 # Author Samuel BOVEE    <samuel@ulteo.com> 2010
 # Author Thomas MOUTON <thomas@ulteo.com> 2011
 # Author David PHAM-VAN <d.pham-van@ulteo.com> 2013
@@ -69,6 +69,8 @@ if sys.platform == "win32":
 			self.copyright = "Copyright (C) @YEAR@ Ulteo SAS"
 			self.name = "Ulteo OVD"
 			self.icon_resources = [(0, "media\\ulteo.ico")]
+			self.version = "@VERSION_STRICT@"
+			self.product_version = "@VERSION@"
 	
 	class ConsoleTarget:
 		def __init__(self):
@@ -78,6 +80,8 @@ if sys.platform == "win32":
 			self.copyright = "Copyright (C) @YEAR@ Ulteo SAS"
 			self.name = "Ulteo OVD"
 			self.icon_resources = [(0, "media\\ulteo.ico")]
+			self.version = "@VERSION_STRICT@"
+			self.product_version = "@VERSION@"
 	
 	setup_args["zipfile"] = "lib/shared.zip"
 	setup_args["console"] = [ConsoleTarget()]
