--- a/SessionManager/web/webservices/Makefile.am
+++ b/SessionManager/web/webservices/Makefile.am
@@ -6,7 +6,8 @@ scripts_DATA =  application_icon.php \
                 server_name.php \
                 session_dump.php \
                 session_status.php \
-                server_status.php
+                server_status.php \
+                scripts_sync.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/webservices
 EXTRA_DIST = $(scripts_DATA)
