--- a/client/web/web/media/script/uovd/provider/Makefile.am
+++ b/client/web/web/media/script/uovd/provider/Makefile.am
@@ -1,5 +1,7 @@
-SUBDIRS = http \
-          rdp
+SUBDIRS = applications \
+          http \
+          rdp \
+          webapps
 
 scripts_DATA = java.js
 
