Cleaning : webclient Makefile.am

--- a/client/web/web/media/script/webclient/Makefile.am
+++ b/client/web/web/media/script/webclient/Makefile.am
@@ -1,6 +1,7 @@
 scripts_DATA = ajaxplorer.js \
                application_counter.js  \
-               application.js common.js  \
+               application.js \
+               common.js  \
                daemon_applications.js  \
                daemon_desktop.js  \
                daemon_external.js  \
@@ -10,10 +11,12 @@ scripts_DATA = ajaxplorer.js \
                external.js  \
                JavaTester.js  \
                Logger.js  \
+               progress_bar.js \
                seamless_launcher.js  \
                seamless_window_manager.js  \
-               server.js timezones.js  \
-               start_app.php.js  \
+               server.js \
+               timezones.js  \
+               start_app.js  \
                ui.js  \
                uovd_ext_client.js  \
                uovd_int_client.js \
