Bugfix:libPCSC do not compile on Visual Studio 2010

--- a/packaging/windows/ovd-jni-pcsc/package.conf
+++ b/packaging/windows/ovd-jni-pcsc/package.conf
@@ -3,7 +3,7 @@ svn_root: client\java\libPCSC
 
 compile_commands:
   - "cmake ."
-  - vcbuild libPCSC.sln "Release|Win32"
+  - "cmake --build . --config Release"
 
 binary_files:
   - Release\libPCSC.dll
