--- a/packaging/debian/ovd-slaveserver-gateway/lucid/control
+++ b/packaging/debian/ovd-slaveserver-gateway/lucid/control
@@ -3,7 +3,7 @@ Section: net
 Priority: extra
 Maintainer: David PHAM-VAN <d.pham-van@ulteo.com>
 Build-Depends: cdbs, debhelper (>= 6),
- python (>= 2.6), python-central, python-svn
+ python (>= 2.6), python-central
 Standards-Version: 3.7.3
 XS-Python-Version: >= 2.6
 
