--- a/ApplicationServer/desktop/config/xfce4/Makefile.am
+++ b/ApplicationServer/desktop/config/xfce4/Makefile.am
@@ -1,6 +1,7 @@
-# Copyright (C) 2010 Ulteo SAS
+# Copyright (C) 2010-2013 Ulteo SAS
 # http://www.ulteo.com
 # Author Samuel BOVEE <samuel@ulteo.com> 2010
+# Author David PHAM-VAN <d.pham-van@ulteo.com> 2013
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -15,6 +16,8 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+
+SUBDIRS = xfconf
 
 XFCE4DIR = $(sysconfdir)/xdg/xfce4
 
