--- a/ApplicationServer/desktop/configure.ac.in
+++ b/ApplicationServer/desktop/configure.ac.in
@@ -1,7 +1,8 @@
-# Copyright (C) 2010 Ulteo SAS
+# Copyright (C) 2010-2013 Ulteo SAS
 # http://www.ulteo.com
 # Author Gauvain POCENTEK <gauvain@ulteo.com> 2009
 # Author Samuel BOVEE <samuel@ulteo.com> 2010
+# Author David PHAM-VAN <d.pham-van@ulteo.com> 2013
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -60,6 +61,7 @@ AC_CONFIG_FILES([Makefile
                  config/plymouth/Makefile
                  config/thunar/Makefile
                  config/xfce4/Makefile
+                 config/xfce4/xfconf/Makefile
                  restricted-menu/Makefile
                  xfsm-compat/Makefile
                  po/Makefile.in
