--- a/ApplicationServer/desktop/xfwm4/Makefile.am
+++ b/ApplicationServer/desktop/xfwm4/Makefile.am
@@ -1,6 +1,5 @@
-# Copyright (C) 2010-2013 Ulteo SAS
+# Copyright (C) 2013 Ulteo SAS
 # http://www.ulteo.com
-# Author Samuel BOVEE <samuel@ulteo.com> 2010
 # Author David PHAM-VAN <d.pham-van@ulteo.com> 2013
 #
 # This program is free software; you can redistribute it and/or
@@ -17,4 +16,11 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-SUBDIRS = config pictures misc restricted-menu xfsm-compat po xfwm4
+xfwm4_DATA = \
+	themerc \
+	$(wildcard *.xpm)
+
+xfwm4dir = $(datarootdir)/themes/Ulteo/xfwm4
+
+EXTRA_DIST = \
+	$(xfwm4_DATA)
