Bugfix: slaveserver must prepare the filesystem for the rufs

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -54,7 +54,7 @@ volatile = ""
 #
 
 # path => path to add
-path = "/var/spool/ulteo/rufs/${USER}/"
+path = "/var/spool/ulteo/ovd/profiles/${USER}/conf/"
 
 acceptSymlink = true
 deleteOnEnd = true
@@ -85,5 +85,5 @@ acceptSymlink = true
 deleteOnEnd = true
 createParentDirectory = true
 
-path = "/var/spool/ulteo/rufs_volatile/${USER}/"
+path = "/var/spool/ulteo/ovd/profiles/${USER}/volatile/"
 
