--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -9,7 +9,7 @@ union = configuration, data, volatile
 bind = false
 
 # destination of the mount bind
-# it can be a path or a section (start with @
+# it can be a path or a section (starts with @)
 bindDestination = @locale
 
 # manage transformation due to session language
@@ -18,24 +18,35 @@ Desktop = "%{DESKTOP}"
 Document= "%{DOCUMENTS}"
 
 [log]
-level = INFO
+# can be ERROR, WARN, INFO or DEBUG
+level = WARN
 program = RegularUnionFS
-enableDevelOutput = true
-enableStdOutput = true
+enableDevelOutput = false
+enableStdOutput = false
 #outputFilename = ""
+
 
 # Rules list
 # list of path redirection
-# union_name => "regex path pattern accepted"
+# union_name => "regex path pattern"
+# Take care : it is true regex ! "*" is not the same as shell path search
+# and "." means any character.
+# see POSIX standard here : http://en.wikipedia.org/wiki/Regular_expression
 [rules]
-volatile = "^/\.mozilla/firefox/.*.default/Cache.*"
+volatile = "^/\.mozilla/firefox/.*\.default/Cache.*"
 volatile = "^/\.cache.*"
+volatile = "^/\.thumbnails.*"
+# libreoffice lock files
+volatile = "\.~lock.*#$"
 data = "^/\.thunderbird.*"
+data = "^/\.local.*"
 configuration = "^/\..*"
-data = "%{DESKTOP}/*"
+data = "%{DESKTOP}/.*"
+data = "%{DOCUMENTS}/.*"
 
 # Last rule to keep files
 data = ""
+
 # Very Last rule to store symlinks
 volatile = ""
 
@@ -43,47 +54,40 @@ volatile = ""
 # Union list
 # each section represent one union destination
 # each section can contain:
-#  -path:          Represent the path where is redirected content.
-#                   It can be specified as absolute or relative path
-#  -rsync:         Represent the path involved in the data synchronization
-#                   of the initial 'path' content
-#  -rsync_filter:  Represent the filter apply to the rsync command
-
-[configuration]
-# represent files involved in the configuration
+#  -path:          Represents the path where is redirected content.
+#                  It can be specified as absolute or relative path
 #
+#  -rsync:         Represents the path involved in the data synchronization
+#                  of the initial 'path' content
+#
+#  -rsync_filter:  Represents the filter apply to the rsync command
+#
+#  -acceptSymlink: Defines if we accept symlink in this location
+#                  default is false
+#
+#  -deleteOnEnd:   Defines if we have to delete this union at logout
+#
+#  -createParentDirectory: 
 
-# path => path to add
+
+# represents files involved in the configuration
+[configuration]
 path = "/var/spool/ulteo/ovd/profiles/${USER}/conf/"
-
 acceptSymlink = true
 deleteOnEnd = true
-
-# data of the path is inited using the the following source
 rsync = conf.Linux/
-
 rsync_filter = "/etc/ulteo/rufs/profiles_filter.conf"
 
 
-
+# represents user data
 [data]
-# represent user data
-#
-
-# define if we accept symlink in this location
 acceptSymlink = false
-
-# path => path to add
 path = Data
 
 
+# represents data not saved
 [volatile]
-
-# define if the repository support symlink
-# default is false
 acceptSymlink = true
 deleteOnEnd = true
 createParentDirectory = true
-
 path = "/var/spool/ulteo/ovd/profiles/${USER}/volatile/"
-
