Improvement: driver need to be signed using DDK 8 in order to be used with windows server 2012

--- a/packaging/windows/pdf-printer-driver-amd64/package.conf
+++ b/packaging/windows/pdf-printer-driver-amd64/package.conf
@@ -12,7 +12,7 @@ compile_commands:
   - call make64.bat
 
 post_dist_commads:
-  - inf2cat /drv:. /os:XP_X64,Server2003_X64,Vista_X64,Server2003_IA64 /v
+  - inf2cat /drv:. /os:XP_X64,Server2003_X64,Vista_X64,Server2003_IA64,Server8_X64 /v
 
 binary_files:
   - ulteo.ppd
