Improvement : add news support

--- a/client/web/web/media/script/webclient/Makefile.am
+++ b/client/web/web/media/script/webclient/Makefile.am
@@ -2,6 +2,7 @@ scripts_DATA = ajaxplorer.js \
                application_counter.js  \
                desktop_container.js  \
                external.js  \
+               news.js  \
                progress_bar.js \
                seamless_launcher.js  \
                seamless_window_manager.js  \
